Controls for second column of Nonlinear Analysis

--- a/rc_fiap_main_window.ui
+++ b/rc_fiap_main_window.ui
@@ -2075,6 +2075,63 @@ Elements</string>
                        <property name="title">
                         <string>_</string>
                        </property>
+                       <layout class="QGridLayout" name="gridLayout_46">
+                        <item row="0" column="0">
+                         <layout class="QFormLayout" name="formLayout_2">
+                          <item row="0" column="0">
+                           <widget class="QLabel" name="label">
+                            <property name="text">
+                             <string>Target story drift ratio:</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="0" column="1">
+                           <widget class="QDoubleSpinBox" name="doubleSpinBox"/>
+                          </item>
+                          <item row="1" column="0">
+                           <widget class="QLabel" name="label_2">
+                            <property name="text">
+                             <string>Number of steps:</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="1" column="1">
+                           <widget class="QSpinBox" name="spinBox_2"/>
+                          </item>
+                          <item row="2" column="0">
+                           <widget class="QLabel" name="label_3">
+                            <property name="text">
+                             <string>Output Pushover file:</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="2" column="1">
+                           <widget class="QLineEdit" name="lineEdit"/>
+                          </item>
+                          <item row="3" column="0">
+                           <widget class="QLabel" name="label_4">
+                            <property name="text">
+                             <string>type of chart</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="4" column="0">
+                           <widget class="QRadioButton" name="radioButton">
+                            <property name="text">
+                             <string>PHP plastic rotation</string>
+                            </property>
+                           </widget>
+                          </item>
+                          <item row="5" column="0">
+                           <widget class="QRadioButton" name="radioButton_2">
+                            <property name="text">
+                             <string>Acceptance criteria ASCE-17-41</string>
+                            </property>
+                           </widget>
+                          </item>
+                         </layout>
+                        </item>
+                       </layout>
                       </widget>
                      </item>
                     </layout>
